# swsn-project

./: README.md  context_gathering.py  context_generation.py  correction_generation.py  data_analysis.ipynb  data_prep.ipynb  main.py  pyproject.toml  query_generation.py  utils.py
data/processed/: Politifact_processed.csv  samples_processed.csv  selected_posts_with_responses.csv  selected_posts_with_responses.json
data/tweets_correction/: posts.csv
report/: header.tex  references.bib  report.md
