[project]
name = "11-semantic-web"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.7",
    "nltk>=3.9.2",
    "openai>=2.8.1",
    "pandas>=2.3.3",
    "seaborn>=0.13.2",
    "tweet-preprocessor>=0.6.0",
]
